3.3.4/_sources/gallery/ticks_and_spines/date_demo_rrule.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/ticks_and_spines/date_demo_rrule.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_ticks_and_spines_date_demo_rrule.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_ticks_and_spines_date_demo_rrule.py:


===============
Date Demo Rrule
===============

Show how to use an rrule instance to make a custom date ticker - here
we put a tick mark on every 5th easter

See https://dateutil.readthedocs.io/en/stable/ for help with rrules

.. GENERATED FROM PYTHON SOURCE LINES 11-40



.. image:: /gallery/ticks_and_spines/images/sphx_glr_date_demo_rrule_001.png
    :alt: date demo rrule
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    from matplotlib.dates import (YEARLY, DateFormatter,
                                  rrulewrapper, RRuleLocator, drange)
    import numpy as np
    import datetime

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    # tick every 5th easter
    rule = rrulewrapper(YEARLY, byeaster=1, interval=5)
    loc = RRuleLocator(rule)
    formatter = DateFormatter('%m/%d/%y')
    date1 = datetime.date(1952, 1, 1)
    date2 = datetime.date(2004, 4, 12)
    delta = datetime.timedelta(days=100)

    dates = drange(date1, date2, delta)
    s = np.random.rand(len(dates))  # make up some random y values


    fig, ax = plt.subplots()
    plt.plot_date(dates, s)
    ax.xaxis.set_major_locator(loc)
    ax.xaxis.set_major_formatter(formatter)
    ax.xaxis.set_tick_params(rotation=30, labelsize=10)

    plt.show()


.. _sphx_glr_download_gallery_ticks_and_spines_date_demo_rrule.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: date_demo_rrule.py <date_demo_rrule.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: date_demo_rrule.ipynb <date_demo_rrule.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
